--- a/src/main/webapp/pages/customer/new-ticket.xhtml
+++ b/src/main/webapp/pages/customer/new-ticket.xhtml
@@ -11,30 +11,28 @@
     <ui:define name="title">#{msgs['customer.create.title']}</ui:define>
     <ui:define name="header">#{msgs['customer.create.header']}</ui:define>
     <ui:define name="content">
+        <h:form id="form" prependId="false">
+            <f:facet name="last">
+                <h:outputStylesheet name="new-ticket.css" library="styles" />
+            </f:facet>
 
-        <f:facet name="last">
-            <h:outputStylesheet name="ticket.css" library="styles" />
-        </f:facet>
+            <p:panel id="newTicketPanel" header="Neues Ticket" styleClass="center" >
+                    <p:panelGrid id="newTicketPanelGridInfo" columns="1">
+                        <h:outputText value="Bitte füllen Sie alle benötigten Daten aus."/>
+                    </p:panelGrid>
 
-        <p:panel id="newTicketPanel" header="Neues Ticket" styleClass="center" >
-            <h:form prependId="false">
-                <p:panelGrid id="newTicketPanelGridInfo" columns="1">
-                    <h:outputText value="Bitte füllen Sie alle benötigten Daten aus."/>
-                </p:panelGrid>
+                    <p:panelGrid id="newTicketPanelGridInput" columns="1">
 
-                <p:panelGrid id="newTicketPanelGridInput" columns="1">
+                        <h:outputLabel value="#{msgs['label.subject']}" />
+                        <p:inputTextarea rows="1" maxlength="256" id="inputSubject" value="#{ticketCustomerBean.ticketSubject}" required="true" requiredMessage="Betreff darf nicht leer sein!" />
 
-                    <h:outputLabel value="#{msgs['label.subject']}" />
-                    <p:inputTextarea rows="1" maxlength="256" id="inputSubject" value="#{ticketCustomerBean.ticketSubject}" required="true" requiredMessage="Betreff darf nicht leer sein!" />
+                        <h:outputLabel value="#{msgs['label.content']}" />
+                        <p:inputTextarea rows="8" maxlength="2048" id="inputEntry" value="#{ticketCustomerBean.ticketContent}" required="true" requiredMessage="Inhalt darf nicht leer sein!" />
 
-                    <h:outputLabel value="#{msgs['label.content']}" />
-                    <p:inputTextarea rows="8" maxlength="2048" id="inputEntry" value="#{ticketCustomerBean.ticketContent}" required="true" requiredMessage="Inhalt darf nicht leer sein!" />
-
-                    <h:commandButton value="Ticket erstellen" action="#{ticketCustomerBean.newTicket(ticketCustomerBean.ticketContent, ticketCustomerBean.ticketSubject)}"/>
-                </p:panelGrid>
+                        <h:commandButton value="Ticket erstellen" action="#{ticketCustomerBean.newTicket(ticketCustomerBean.ticketContent, ticketCustomerBean.ticketSubject)}"/>
+                    </p:panelGrid>
+                </p:panel>
             </h:form>
-        </p:panel>
-
     </ui:define>
 </ui:composition>
 </html>
