my profile layout completed

--- a/src/main/webapp/pages/help.xhtml
+++ b/src/main/webapp/pages/help.xhtml
@@ -16,7 +16,7 @@
             <h:outputStylesheet name="help.css" library="styles" />
         </f:facet>
 
-    <p:panel id="loginPanel" header="#{msgs['user.help.message']}" styleClass="center" >
+    <p:panel id="helpPamel" header="#{msgs['user.help.message']}" styleClass="center" >
 
         <h:form id="form">
             <p:accordionPanel multiple="true">
