--- a/src/main/webapp/pages/customer/ticket-details.xhtml
+++ b/src/main/webapp/pages/customer/ticket-details.xhtml
@@ -11,66 +11,44 @@
 <ui:define name="title">#{msgs['customer.details.title']}</ui:define>
 <ui:define name="header">#{msgs['customer.details.header']}</ui:define>
 <ui:define name="content">
-    <h:form id="form">
-
-
-        <style type="text/css">
-            .logo {
-                width: 5%
-            }
-
-            .detail {
-                width: 95%;
-                padding-left: 25px;
-            }
-
-            .detail td {
-                font-size: 24px;
-            }
-
-            .ui-datascroller .ui-datascroller-item {
-                border-bottom: 1px solid #A8A8A8;
-                padding: 25px 10px;
-            }
-
-        </style>
+    <h:form id="form" prependId="false">
+        <f:facet name="last">
+            <h:outputStylesheet name="details-customer.css" library="styles" />
+        </f:facet>
 
         <p:dialog header="#{msgs['entry.edit']}" widgetVar="dlgEntry" modal="true" height="200" width="500">
-            <p:inputTextarea style="margin: 0 auto" rows="8" cols="70" id="entryText" value="#{ticketCustomerBean.entryContent}" />
+            <p:inputTextarea style="margin: 0 auto; width: 100%" rows="8" id="entryText" value="#{ticketCustomerBean.entryContent}" />
             <h:commandButton value="Eintrag Hinzufügen" action="#{ticketCustomerBean.addEntryToTicket(ticketCustomerBean.entryContent)}"/>
         </p:dialog>
 
-        <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
-            <h:outputText />
-            <h:panelGrid columns="3" class="buttons">
-                <h:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" rendered="#{customerView.renderButton()}"/>
-            </h:panelGrid>
 
-            <h3 style="margin-top:0">#{msgs['label.status']}: </h3>
+
+        <h:panelGrid style="width: 100%;" id="userDetailsPanelGridInfo" columns="4">
+            <h:outputLabel value="#{msgs['label.ticketId']}:"/>
+            <h:outputLabel value="#{ticketCustomerBean.currentTicket.id}"/>
+
+            <h:outputLabel value="#{msgs['label.subject']}:"/>
+            <h:outputLabel value="#{ticketCustomerBean.currentTicket.subject}"/>
+
+            <h:outputLabel value="#{msgs['label.status']}:"/>
             <p:graphicImage library="images" name="#{ticketCustomerBean.currentTicket.status}.png" alt="#{ticketCustomerBean.currentTicket.status}" />
 
-            <h2 style="margin-top:0">#{msgs['label.subject']}: </h2>
-            <h:outputText value="#{ticketCustomerBean.currentTicket.subject}" />
+            <h:outputLabel value="#{msgs['editor']}:"/>
+            <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.editorId)}" />
 
-            <h3 style="margin-top:0">#{msgs['label.ticketId']}: </h3>
-            <h:outputText value="#{ticketCustomerBean.currentTicket.id}" />
+            <h:outputLabel value="#{msgs['label.company']}:"/>
+            <h:outputLabel value="#{userBean.getUserCompany(ticketCustomerBean.currentTicket.customerId)}"/>
 
-            <h3 style="margin-top:0">#{msgs['editor']}: </h3>
-            <h:outputText value="#{ticketCustomerBean.currentTicket.editorId}" />
+            <h:outputLabel value="#{msgs['label.customer']}:"/>
+            <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.customerId)}"/>
+        </h:panelGrid>
 
-            <h3 style="margin-top:0">#{msgs['label.customer']}: </h3>
-            <h:outputText value="#{userBean.getUserName(ticketCustomerBean.currentTicket.customerId)}" />
-
-            <h3 style="margin-top:0">#{msgs['label.company']}: </h3>
-            <h:outputText value="#{userBean.getUserCompany(ticketCustomerBean.currentTicket.customerId)}" />
-
-            <h3>#{msgs['entries']}: </h3>
+        <h:panelGrid id="userDetailsPanelGridButtons" columns="1" class="">
+            <h:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" rendered="#{customerView.renderButton()}"/>
         </h:panelGrid>
 
         <p:dataScroller id="searchResult" value="#{ticketCustomerBean.currentEntries}" var="entry" chunkSize="10">
-            <f:facet name="header">
-                #{msgs['label.scrollDownEntries']}
-            </f:facet>
+            <f:facet name="header">Verlauf</f:facet>
 
             <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
                 <h:outputText value="#{msgs['date']}: " />
