--- a/src/main/webapp/pages/customer/ticket-details.xhtml
+++ b/src/main/webapp/pages/customer/ticket-details.xhtml
@@ -21,27 +21,28 @@
             <h:commandButton value="Eintrag Hinzufügen" action="#{ticketCustomerBean.addEntryToTicket(ticketCustomerBean.entryContent)}"/>
         </p:dialog>
 
-        <h:panelGrid style="width: 100%;" id="userDetailsPanelGridInfo" columns="4">
+        <h:panelGrid id="ticketDetailsPanelGridInfo" columns="2" columnClasses="logo,detail">
             <h:outputLabel value="#{msgs['label.ticketId']}:"/>
             <h:outputLabel value="#{ticketCustomerBean.currentTicket.id}"/>
 
             <h:outputLabel value="#{msgs['label.subject']}:"/>
             <h:outputLabel value="#{ticketCustomerBean.currentTicket.subject}"/>
 
-            <h:outputLabel value="#{msgs['label.status']}:"/>
-            <p:graphicImage library="images" name="#{ticketCustomerBean.currentTicket.status}.png" alt="#{ticketCustomerBean.currentTicket.status}" />
-
             <h:outputLabel value="#{msgs['editor']}:"/>
             <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.editorId)}" />
+
+            <h:outputLabel value="#{msgs['label.status']}:"/>
+            <h:outputLabel value="#{ticketCustomerBean.currentTicket.status}"/>
+
+            <h:outputLabel value="#{msgs['label.customer']}:"/>
+            <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.customerId)}"/>
 
             <h:outputLabel value="#{msgs['label.company']}:"/>
             <h:outputLabel value="#{userBean.getUserCompany(ticketCustomerBean.currentTicket.customerId)}"/>
 
-            <h:outputLabel value="#{msgs['label.customer']}:"/>
-            <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.customerId)}"/>
         </h:panelGrid>
 
-        <h:panelGrid id="userDetailsPanelGridButtons" columns="1" class="">
+        <h:panelGrid id="ticketDetailsPanelGridButtons" columns="1" class="">
             <h:commandButton value="#{msgs['button.add.entry']}" type="button" onclick="PF('dlgEntry').show();" rendered="#{customerView.renderButton()}"/>
         </h:panelGrid>
 
