--- a/src/main/webapp/pages/customer/ticket-details.xhtml
+++ b/src/main/webapp/pages/customer/ticket-details.xhtml
@@ -23,22 +23,22 @@
 
         <h:panelGrid id="ticketDetailsPanelGridInfo" columns="2" columnClasses="logo,detail">
             <h:outputLabel value="#{msgs['label.ticketId']}:"/>
-            <h:outputLabel value="#{ticketCustomerBean.currentTicket.id}"/>
+            <h:outputText value="#{ticketCustomerBean.currentTicket.id}"/>
 
             <h:outputLabel value="#{msgs['label.subject']}:"/>
-            <h:outputLabel value="#{ticketCustomerBean.currentTicket.subject}"/>
+            <h:outputText value="#{ticketCustomerBean.currentTicket.subject}"/>
 
             <h:outputLabel value="#{msgs['editor']}:"/>
-            <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.editorId)}" />
+            <h:outputText value="#{userBean.getUserName(ticketCustomerBean.currentTicket.editorId)}" />
 
             <h:outputLabel value="#{msgs['label.status']}:"/>
-            <h:outputLabel value="#{ticketCustomerBean.currentTicket.status}"/>
+            <h:outputText value="#{ticketCustomerBean.currentTicket.status}"/>
 
             <h:outputLabel value="#{msgs['label.customer']}:"/>
-            <h:outputLabel value="#{userBean.getUserName(ticketCustomerBean.currentTicket.customerId)}"/>
+            <h:outputText value="#{userBean.getUserName(ticketCustomerBean.currentTicket.customerId)}"/>
 
             <h:outputLabel value="#{msgs['label.company']}:"/>
-            <h:outputLabel value="#{userBean.getUserCompany(ticketCustomerBean.currentTicket.customerId)}"/>
+            <h:outputText value="#{userBean.getUserCompany(ticketCustomerBean.currentTicket.customerId)}"/>
 
         </h:panelGrid>
 
