--- a/src/main/webapp/pages/admin/user-details.xhtml
+++ b/src/main/webapp/pages/admin/user-details.xhtml
@@ -11,39 +11,54 @@
     <ui:define name="title">#{msgs['admin.user.title']}</ui:define>
     <ui:define name="header">#{msgs['admin.details.title']}</ui:define>
     <ui:define name="content">
-        <h:form id="form">
-            <style type="text/css">
-                .description {
-                    width: 15%;
-                }
 
-                .detail {
-                    width: 80%;
-                    padding-left: 25px;
-                }
-            </style>
-            <h:commandButton value="#{msgs['button.delete']}" action="#{userBean.deleteUser(userBean.currentUser)}"/>
+        <f:facet name="last">
+            <h:outputStylesheet name="myProfile.css" library="styles" />
+        </f:facet>
 
-            <h:panelGrid style="width:100%" columns="2" cellpadding="2" columnClasses="description, detail">
-                <h3>Username:</h3>
-                <h:outputText value="#{userBean.currentUser.name}" />
+        <p:panel id="userDetails" header="#{msgs['admin.details.data']}" styleClass="panelGridCenterAndTop">
 
-                <h3>User ID: </h3>
-                <h:outputText value="#{userBean.currentUser.id}" />
+            <h:form id="form">
 
-                <h3>Users Company: </h3>
-                <h:outputText value="#{userBean.currentUser.company}" />
 
-                <h3>User Roles: </h3>
-                <p:outputPanel>
-                    <h:dataTable value="#{userBean.currentUser.roles}" var="role"><f:facet name="Role">Status</f:facet>
-                        <h:column>
-                            #{role.name}
-                        </h:column>
-                    </h:dataTable>
-                </p:outputPanel>
-            </h:panelGrid>
-        </h:form>
+                #{generalView.getUserToDisplay()}
+
+                <h:panelGrid style="width:100%" columns="2" cellpadding="80" columnClasses="description, detail" styleClass="panelGridCenter">
+                    <h:outputLabel value="#{msgs['label.name']}: " style="font-weight: bold"/>
+                    <h:outputText value="#{userBean.currentUser.name}" />
+
+                    <h:outputLabel value="#{msgs['label.login_id']}: " style="font-weight: bold"/>
+                    <h:outputText value="#{userBean.currentUser.loginID}" />
+
+                    <h:outputLabel value="#{msgs['label.email']}: " style="font-weight: bold"/>
+                    <h:outputText value="#{userBean.currentUser.email}" />
+
+                    <h:outputLabel value="#{msgs['label.company']}: " style="font-weight: bold"/>
+                    <h:outputText value="#{userBean.currentUser.company}" />
+
+                    <h:outputLabel value="#{msgs['label.role']}: " style="font-weight: bold"/>
+                    <p:outputPanel>
+                        <h:dataTable value="#{userBean.currentUser.roles}" var="role"><f:facet name="Role">Status</f:facet>
+                            <h:column>
+                                #{role.name}
+                            </h:column>
+                        </h:dataTable>
+                    </p:outputPanel>
+                </h:panelGrid>
+                <h:panelGrid style="width:100%" columns="1" cellpadding="80" columnClasses="description, detail" styleClass="commandButton" >
+                    <p:growl id="message" showDetail="true" />
+
+                    <p:commandButton value="#{msgs['button.delete']}" action="#{userBean.deleteUser(userBean.currentUser)}" update="message">
+                        <p:confirm header="Achtung" message="Möchten Sie dieses Profil wirklich löschen?"/>
+                    </p:commandButton>
+
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                        <p:commandButton value="Ja" type="button" styleClass="ui-confirmdialog-yes" />
+                        <p:commandButton value="Nein" type="button" styleClass="ui-confirmdialog-no"/>
+                    </p:confirmDialog>
+                </h:panelGrid>
+            </h:form>
+        </p:panel>
     </ui:define>
 </ui:composition>
 </html>
