Update editor webpages for new design and workflow

--- a/src/main/webapp/pages/customer/ticket-details.xhtml
+++ b/src/main/webapp/pages/customer/ticket-details.xhtml
@@ -13,7 +13,7 @@
 <ui:define name="content">
     <h:form id="form" prependId="false">
         <f:facet name="last">
-            <h:outputStylesheet name="details-customer.css" library="styles" />
+            <h:outputStylesheet name="details-ticket.css" library="styles" />
         </f:facet>
 
         <p:dialog header="#{msgs['entry.edit']}" widgetVar="dlgEntry" modal="true" height="200" width="500">
