--- a/src/main/webapp/pages/customer/company-tickets.xhtml
+++ b/src/main/webapp/pages/customer/company-tickets.xhtml
@@ -13,7 +13,7 @@
     <ui:define name="content">
         <h:form id="form" prependId="false">
             <f:facet name="last">
-                <h:outputStylesheet name="search-customer.css" library="styles" />
+                <h:outputStylesheet name="search-tickets.css" library="styles" />
             </f:facet>
 
             #{ticketCustomerBean.fetchAllTickets()}
@@ -39,10 +39,10 @@
 
                         <p:outputPanel>
                             <h:panelGrid columns="2" cellpadding="5">
-                                <h:outputText value="Editor:" />
-                                <h:outputText value="#{ticket.editorId}" style="font-weight: bold"/>
+                                <h:outputText value="#{msgs['editor']}:" />
+                                <h:outputText value="#{userBean.getUserName(ticket.editorId)}" style="font-weight: bold"/>
 
-                                <h:outputText value="Subject:" />
+                                <h:outputText value="#{msgs['label.subject']}:" />
                                 <h:outputText value="#{ticket.subject}" style="font-weight: bold"/>
                             </h:panelGrid>
                         </p:outputPanel>
