--- a/src/main/webapp/pages/admin/all-users.xhtml
+++ b/src/main/webapp/pages/admin/all-users.xhtml
@@ -19,12 +19,12 @@
             #{userBean.fetchAllUsers()}
 
             <p:panel id="searchPanel" >
-                <p:panelGrid id="searchPanelGrid" columns="2">
-                    <h:outputLabel id="searchLabel" value="Suche:" />
+                <p:panelGrid id="searchPanelGrid" columns="1">
                     <p:inputText id="searchInput" value="#{userBean.searchString}">
                         <p:ajax event="keyup" delay="100" update="searchResult"
                                 listener="#{userBean.fetchAllUsers()}" />
                     </p:inputText>
+                    <p:watermark for="searchInput" value="Nach Benutzern suchen..." id="watermark" />
                 </p:panelGrid>
             </p:panel>
 
