Import index.css

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -11,6 +11,10 @@
     <ui:define name="header">#{msgs['index.header']}</ui:define>
     <ui:define name="content">
 
+        <f:facet name="last">
+            <h:outputStylesheet name="index.css" library="styles" />
+        </f:facet>
+
     </ui:define>
 </ui:composition>
 
