demodata with more entries

--- a/src/main/webapp/pages/editor/ticket-details.xhtml
+++ b/src/main/webapp/pages/editor/ticket-details.xhtml
@@ -24,7 +24,7 @@
             <p:dialog header="#{msgs['ticket.delegate']}" widgetVar="dlgDelegate" modal="true" height="600" width="500" resizable="false">
                 <p:dataScroller id="editors" value="#{userBean.getEditors()}" var="user" chunkSize="10">
                     <f:facet name="header">
-                        Scroll Down to Load More Uers
+                        Bearbeiter
                     </f:facet>
 
                     <h:panelGrid columns="2" style="width:100%" columnClasses="delegate,delegateButtons">
