Fix missing string property in my-profile and typo in demo data

--- a/src/main/webapp/pages/my-profile.xhtml
+++ b/src/main/webapp/pages/my-profile.xhtml
@@ -15,7 +15,7 @@
             <h:outputStylesheet name="myProfile.css" library="styles" />
         </f:facet>
 
-        <p:panel id="myProfilePanel" header="#{msgs['user.myProfile.message']}" styleClass="panelGridCenterAndTop">
+        <p:panel id="myProfilePanel" header="#{msgs['user.myProfile']}" styleClass="panelGridCenterAndTop">
 
             <h:form id="form">
 
