--- a/src/main/webapp/pages/editor/all-tickets.xhtml
+++ b/src/main/webapp/pages/editor/all-tickets.xhtml
@@ -28,13 +28,14 @@
                 </p:panelGrid>
             </p:panel>
 
-        <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-            <h:outputText value="Sortierung: :" />
+        <h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5">
+            <h:outputText value="Sortierung: " />
             <p:selectManyButton value="#{filterBean.selectedOptions}">
                 <f:selectItem itemLabel="Open" itemValue="open" />
                 <f:selectItem itemLabel="In Process" itemValue="inProcess" />
                 <f:selectItem itemLabel="Closed" itemValue="closed" />
             </p:selectManyButton>
+            <p:commandButton value="Submit" update="searchResult" />
         </h:panelGrid>
 
             <p:panel id="resultPanel" >
